fix alignment of first nav tab

--- a/fedsdm/static/css/custom.css
+++ b/fedsdm/static/css/custom.css
@@ -174,6 +174,9 @@ a:hover {
   color: #23527c !important;
   background-color: #eee;
 }
+#maincontent li:first-child {
+  padding-left: 0 !important;
+}
 @media (min-width: 768px) {
   .sidebar {
     z-index: 1;
